Refactor Auth Module
